# dmrgpp

./: .clang-format  .cmake-format  .pre-commit-config.yaml  AUTHORS  CHANGES  CMakeLists.txt  CODEMAP  ChangeLog.txt  Doxyfile  INDENTATION  INSTALL  LICENSE  NEWS  PolicyRegardingRegressions.txt  README  README.md  README.pod  TODO  spack.yaml
PsimagLite/examples/: CMakeLists.txt  ConfigBase.psiTag  TestMemResolv1.h  affinityTest.cpp  akimaSpline.cpp  base64test.cpp  calculator.cpp  checkRunId.cpp  closuresTest.cpp  combineContinuedFraction.cpp  continuedFraction.cpp  continuedFractionCollection.cpp  fit.cpp  integrator.cpp  internode.cpp  isBlasThreaded.cpp  kernelPolynomial.cpp  linearPrediction.cpp  loadImbalance.cpp  minimizer.cpp  myApp01.cpp  nested.cpp  newconfigure.pl  options.cpp  randomTest.cpp  range.cpp  rungeKuttaTest.cpp  sfinaeHasMember.cpp  small.jsn  sparseSolverTest.cpp  sumDecomposition.cpp  svd.cpp  testArnoldiIteration.cpp  testArnoldiSaI.cpp  testCRSMatrix.cpp  testExcitedLanczos.cpp  testGemmR.cpp  testGemmR2.cpp  testInputNg.cpp  testIoNg.cpp  (+10 more)
PsimagLite/loki/: CMakeLists.txt  NullType.h  Sequence.h  TypeManip.h  TypeTraits.h  Typelist.h  TypelistMacros.h
PsimagLite/src/: AkimaSpline.h  AllocatorCpu.h  AlmostEqual.h  AnsiColors.h  ApplicationInfo.h  ArnoldiIteration.hh  ArnoldiSaI.hh  BLAS.h  BitManip.h  CMakeLists.txt  CanonicalExpression.h  ChebyshevFunction.h  ChebyshevFunctionExplicit.h  ChebyshevSerializer.h  ChebyshevSolver.h  CmplxOrReal.h  CodeSectionParams.h  Complex.h  Concurrency.cpp  Concurrency.h  ContinuedFraction.h  ContinuedFractionCollection.h  CrsMatrix.h  DavidsonSolver.h  DeepCopyOrNot.h  Fermi.h  FreqEnum.h  GemmR.h  GetBraOrKet.h  GslWrapper.h  InputCheckBase.h  InputNg.h  Integrator.h  InterNodeMpi.h  InterNodeSerial.h  IsClass.h  LAPACK.h  LabelDisabled.h  LanczosCore.h  LanczosOrDavidsonBase.h  (+77 more)
cincuenta/src/: AndersonFunction.h  CMakeLists.txt  DensityOfStates.h  Dispersion.h  DmftSolver.h  Fit.h  FunctionOfFrequency.h  ImpuritySolverBase.h  ImpuritySolverDmrg.h  ImpuritySolverExactDiag.h  InputCheck.h  LatticeGf.h  Matsubaras.h  MinParams.h  ParamsDmftSolver.h  Provenance.cpp  Provenance.h  Version.h  cincuenta.cpp  freeGimp.cpp
examples/: CMakeLists.txt  Config.make.sample  Makefile.in  affinityTest.cpp  akimaSpline.cpp  binaryIoTest.cpp  calculator.cpp  closuresTest.cpp  continuedFraction.cpp  continuedFractionCollection.cpp  internode.cpp  loadImbalance.cpp  myApp01.cpp  nested.cpp  openblasConfig.cpp  options.cpp  randomTest.cpp  rungeKuttaTest.cpp  sfinaeHasMember.cpp  sparseSolverTest.cpp  sumDecomposition.cpp  testInput.ain  testInputNg.cpp  testIoNg.cpp  testIsClass.cpp  testLanczos.cpp  testParallelizer2.cpp  threads.cpp
loki/: CMakeLists.txt  Sequence.h  TypeTraits.h
src/: .clang-format  Akima.h  AkimaSpline.h  AllocatorCpu.h  AlmostEqual.h  AndersonFunction.h  AnsiColors.h  ApplicationInfo.cpp  ApplicationInfo.h  BLAS.h  BinarySaveLoad.h  BitManip.h  BoostSerializationHeaders.h  CLEAN_UP_SCHEDULE  CMakeLists.txt  CanonicalExpression.h  ChebyshevFunction.h  ChebyshevFunctionExplicit.h  ChebyshevSerializer.h  ChebyshevSolver.h  CmplxOrReal.h  CodeSectionParams.h  Complex.h  Concurrency.cpp  Concurrency.h  ConcurrencyMpi.h  ConcurrencyMpiFunctions.h  ConcurrencySerial.h  Config.make.sample  ConfigBase.psiTag  ContinuedFraction.h  ContinuedFractionCollection.h  CrsMatrix.h  DavidsonSolver.h  DeepCopyOrNot.h  DensityOfStates.h  Dispersion.h  DmftSolver.h  DmrgDriver.h  DmrgDriver.pl  (+201 more)
src/AST/: AdditionalFunctions.h  ExpressionForAST.h  Node.h  PlusMinusMultiplyDivide.h  Tree.h
src/Ainur/: Ainur.h  AinurComplex.hh  AinurComplexHelper.h  AinurConvert.hh  AinurConvert1.cpp  AinurDoubleOrFloat.h  AinurEmpty.h  AinurLexical.h  AinurMacros.hh  AinurReadable.h  AinurSpirit.h  AinurSpirit1.cpp  AinurState.cpp  AinurState.h  AinurState1.cpp  AinurStatements.h  AinurStore.h  Config.make.sample  configure.pl  function.txt  input0.ain  test.cpp  testReal.cpp
src/Engine/: AdaptiveDynamicParams.h  AdaptiveDynamicTargetting.h  AdditionalOnSiteHamiltonianExt.h  AlgebraForTargetingExpression.h  AlgebraicStringToNumber.h  ApplyFactors.h  ApplyHamiltonian.h  ApplyOperatorExpression.h  ApplyOperatorLocal.h  ApplyOperatorNsl.h  ArchiveFiles.h  Array.h  ArrayOfMatStruct.h  AuxForTargetingExpression.h  BaseStack.h  Basis.h  BasisData.h  BasisImplementation.h  BasisTraits.hh  BasisWithOperators.h  BlockDiagonalMatrix.h  BlockMatrix.h  BlockOffDiagMatrix.h  Braket.h  CachedHamiltonianLinks.h  Chain.h  ChangeOfBasis.h  Checkpoint.h  ClebschGordan.h  ClebschGordanCached.h  Cloner.h  CommonTargetting.h  CompressedVector.h  Concurrency.h  ConcurrencyMpi.h  ConcurrencyMpiFunctions.h  ConcurrencySerial.h  ConjugateGradient.h  Connector.h  Connectors.h  (+288 more)
src/ExactDiag/: Basis.h  BasisExactDiag.h  BasisOneSpin.h  ExactGreenFunction.h  LabeledOperator.h  ModelParams.h
src/FreeSystem/: FreeOperator.h  FreeSystemCore.h  HilbertVector.h  main.cpp
src/Geometries/: Chain.h  Geometry1D.h  GeometryFactory.h  GeometryLadder.h  GeometryLadderFeAs.h  KTwoNiFFour.h  Ladder.h  LadderBath.h  LadderX.h
src/Geometry/: Chain.h  ChainEx.h  Geometry.h  GeometryBase.h  GeometryDca.h  GeometryDirection.h  GeometryEx.h  GeometryFactory.h  GeometryInterface.h  GeometryTerm.h  GeometryUtils.h  Honeycomb.h  HowToConstructANewGeometry.txt  KTwoNiFFour.h  Ladder.h  LadderBath.h  LadderX.h  LongChain.h  LongRange.h  Star.h
src/Io/: IoNg.h  IoNgSerializer.cpp  IoNgSerializer.h  IoSelector.h  IoSerializerEmpty.h  IoSerializerStub.h  IoSimple.h  TypeToH5.cpp  TypeToH5.h
src/JSON/: AUTHORS  JSN_Writer.h  JsonReader.h  MatrixLike.h  OperationClosure.h  PSIMAGAssert.h  Transposer.h
src/KronUtil/: CMakeLists.txt  KronUtil.cpp  KronUtil.h  KronUtilComplex.cpp  KronUtilWrapper.h  Makefile  MatrixDenseOrSparse.h  README  blas.h  configure.pl  coord2csr.c  coord2csr.cpp  csc_kron_mult.c  csc_kron_mult.cpp  csc_matmul_post.cpp  csc_matmul_pre.c  csc_matmul_pre.cpp  csc_nnz.cpp  csr2den.cpp  csr_den_kron_mult.c  csr_den_kron_mult.cpp  csr_eye.cpp  csr_is_eye.cpp  csr_nnz.c  (+44 more)
(+995 files in other folders)
